--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,95 +15,27 @@
                         <p class="card-category">Welcome to <b> Document Verification Network</b> - HUST Portal </p>
                     </div>
                     <div class="card-body">
-                        <form>
+                        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                             <div class="row">
                                 <div class="col-md-2">
                                 </div>
                                 <div class="col-md-8">
                                     <mat-form-field class="example-full-width">
-                                        <input matInput placeholder="Username">
+                                        <input matInput placeholder="Username" formControlName="username">
                                     </mat-form-field>
                                 </div>
                             </div>
                             <div class="row">
-                                    <div class="col-md-2">
-                                    </div>
-                                    <div class="col-md-8">
-                                        <mat-form-field class="example-full-width">
-                                            <input matInput type="password" placeholder="Password">
-                                        </mat-form-field>
-                                    </div>
+                                <div class="col-md-2">
                                 </div>
-                            <!-- <div class="row">
-                                <div class="col-md-5">
+                                <div class="col-md-8">
                                     <mat-form-field class="example-full-width">
-                                        <input matInput placeholder="Company (disabled)" disabled>
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-md-3">
-                                    <mat-form-field class="example-full-width">
-                                        <input matInput placeholder="Username">
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-md-4">
-                                    <mat-form-field class="example-full-width">
-                                        <input matInput placeholder="Email address" type="email">
+                                        <input matInput type="password" placeholder="Password" formControlName="pwd">
                                     </mat-form-field>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <mat-form-field class="example-full-width">
-                                        <input matInput placeholder="Fist Name" type="text">
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-md-6">
-                                    <mat-form-field class="example-full-width">
-                                        <input matInput placeholder="Last Name" type="text">
-                                    </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <mat-form-field class="example-full-width">
-                                        <input matInput placeholder="Adress" type="text">
-                                    </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <mat-form-field class="example-full-width">
-                                        <input matInput placeholder="City" type="text">
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-md-4">
-                                    <mat-form-field class="example-full-width">
-                                        <input matInput placeholder="Country" type="text">
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-md-4">
-                                    <mat-form-field class="example-full-width">
-                                        <input matInput placeholder="Postal Code" type="text">
-                                    </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <label>About Me</label>
-                                    <mat-form-field class="example-full-width">
-                                        <textarea matInput placeholder="Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo."></textarea>
-                                    </mat-form-field>
-                                     <div class="form-group">
-
-                                      <div class="form-group">
-                                          <label class="bmd-label-floating"> Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</label>
-                                          <textarea class="form-control" rows="5"></textarea>
-                                      </div>
-                                  </div> 
-                    </div>
-                </div>-->
-                <button mat-raised-button type="submit" class="btn btn-danger pull-right">Login</button>
-                <div class="clearfix"></div> 
+                            <button mat-raised-button type="submit" class="btn btn-danger pull-right">Login</button>
+                            <div class="clearfix"></div>
                         </form>
                     </div>
                 </div>
