--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6">
-                <p class="text-center">banner here</p>
+                <img width="50px" src="/assets/img/dvn-logo.svg"/>
             </div>
         </div>
         <div class="row">
