--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3"></div>
-            <div class="col-md-6">
+            <div class="col-md-6 d-flex justify-content-center">
                 <img width="50px" src="/assets/img/dvn-logo.svg"/>
             </div>
         </div>
@@ -11,17 +11,17 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title">Login</h4>
-                        <p class="card-category">Welcome to <b> Document Verification Network</b> - HUST Portal </p>
+                        <h4 class="card-title">Đăng nhập</h4>
+                        <p class="card-category">Trang quản trị <b>hệ thống xác thực bảng điểm sinh viên</b> - HUST Portal </p>
                     </div>
                     <div class="card-body">
-                        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                        <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
                             <div class="row">
                                 <div class="col-md-2">
                                 </div>
                                 <div class="col-md-8">
                                     <mat-form-field class="example-full-width">
-                                        <input matInput placeholder="Username" formControlName="username">
+                                        <input matInput placeholder="Tài khoản" formControlName="username">
                                     </mat-form-field>
                                 </div>
                             </div>
@@ -30,11 +30,14 @@
                                 </div>
                                 <div class="col-md-8">
                                     <mat-form-field class="example-full-width">
-                                        <input matInput type="password" placeholder="Password" formControlName="pwd">
+                                        <input matInput type="password" placeholder="Mật khẩu" formControlName="password">
                                     </mat-form-field>
                                 </div>
                             </div>
-                            <button mat-raised-button type="submit" class="btn btn-danger pull-right">Login</button>
+                            <p class="text-center text-danger" *ngIf="loginMess">{{loginMess}}</p>
+                            <button mat-raised-button type="submit" class="btn btn-danger pull-right"
+                                    [disabled]="loginForm.invalid">Login
+                            </button>
                             <div class="clearfix"></div>
                         </form>
                     </div>
